[package]
name = "wrktr"
version = "0.1.0"
authors = ["Chip Reed <chip@chip.sh>"]
repository = "https://github.com/chippers/wrktr"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "6"
which = "8"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

